--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -9559,10 +9559,10 @@
           />
         </div>
       </div>
-      <div id="contanier4">
+      <div id="container4">
         <div class="Final">
-          <h4>Discover more of what matters to you</h4>
           <div class="Cerca">
+            <h4>Discover more of what matters to you</h4>
             <p>Programming</p>
             <p>Data Science</p>
             <p>Technology</p>
