--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -9560,19 +9560,28 @@
         </div>
       </div>
       <div id="container4">
-        <div class="Final">
-          <div class="Cerca">
-            <h4>Discover more of what matters to you</h4>
-            <p>Programming</p>
-            <p>Data Science</p>
-            <p>Technology</p>
-            <p>Self Improvement</p>
-            <p>Writing</p>
-            <p>Relationships</p>
-            <p>Machine Learning</p>
-            <p>Productivity</p>
-            <p>Politics</p>
-          </div>
+        <h4>Discover more of what matters to you</h4>
+        <div class="Cerca">
+          <p class="finale">Programming</p>
+          <p class="finale">Data Science</p>
+          <p class="finale">Technology</p>
+          <p class="finale">Self Improvement</p>
+          <p class="finale">Writing</p>
+          <p class="finale">Relationships</p>
+          <p class="finale">Machine Learning</p>
+          <p class="finale">Productivity</p>
+          <p class="finale">Politics</p>
+        </div>
+        <div id="ancor">
+          <p>Help</p>
+          <p>Status</p>
+          <p>Writes</p>
+          <p>Blog</p>
+          <p>Careers</p>
+          <p>Privacy</p>
+          <p>Terms</p>
+          <p>About</p>
+          <p>Knowable</p>
         </div>
       </div>
     </main>
