--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/Medium.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Document</title>
   </head>
@@ -9373,6 +9385,7 @@
               <div class="article-meta">
                 Oct 20 · 7 min read
                 <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+                <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
               </div>
             </span>
           </div>
@@ -9395,8 +9408,9 @@
               perspectives can be predictive of how well we age
             </p>
             <div class="article-meta">
-              Oct 27 · 5 min read · Aging
+              Oct 27 · 5 min read · <span>Aging</span>
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
@@ -9413,8 +9427,9 @@
               Can you speak about your trauma if you don't look traumatized?
             </p>
             <div class="article-meta">
-              Oct 24 · 6 min read · Health 
+              Oct 24 · 6 min read · <span> Health </span>
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
@@ -9432,8 +9447,9 @@
               at all times, also the liability.
             </p>
             <div class="article-meta">
-              Oct 15 · 5 min read · Software Engineering
+              Oct 15 · 5 min read · <span> Engineering </span>
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
@@ -9452,8 +9468,9 @@
               planet
             </p>
             <div class="article-meta">
-              Oct 25 · 11 min read · Sustainability
+              Oct 25 · 11 min read · <span> Sustainability </span>
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
@@ -9474,9 +9491,10 @@
             </p>
 
             <div class="article-meta">
-              Oct 26 · 7 min read · Health
+              Oct 26 · 7 min read · <span> Health </span>
 
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
@@ -9495,9 +9513,10 @@
               surprising confessions
             </p>
             <div class="article-meta">
-              Jan 18, 2020 · 6 min read · Experiences
+              Jan 18, 2020 · 6 min read · <span>Experiences </span>
 
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
@@ -9506,6 +9525,7 @@
           <aside>
             <div class="image-authors">
               <img src="../base_di_partenza/assets/imgs/image19.jpeg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
             <h3>Kim Scott</h3>
           </aside>
@@ -9521,8 +9541,9 @@
             </p>
 
             <div class="article-meta">
-              Oct 24 · 6 min read · Health
+              Oct 24 · 6 min read · <span>Health </span>
               <img src="../base_di_partenza/assets/imgs/svg/star.svg" />
+              <img src="../base_di_partenza/assets/imgs/svg/bookmark.svg" />
             </div>
           </div>
         </div>
